--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -382,7 +382,7 @@
        "      <td>449991.06</td>\n",
        "      <td>66700</td>\n",
        "      <td>2023-11-17</td>\n",
-       "      <td>27 days</td>\n",
+       "      <td>28 days</td>\n",
        "      <td>2023-11-16</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
@@ -396,7 +396,7 @@
        "      <td>238466.31</td>\n",
        "      <td>32469</td>\n",
        "      <td>2023-11-17</td>\n",
-       "      <td>7 days</td>\n",
+       "      <td>8 days</td>\n",
        "      <td>2023-11-16</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
@@ -410,7 +410,7 @@
        "      <td>60914.35</td>\n",
        "      <td>8628</td>\n",
        "      <td>2023-11-17</td>\n",
-       "      <td>14 days</td>\n",
+       "      <td>15 days</td>\n",
        "      <td>2023-11-16</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
@@ -424,7 +424,7 @@
        "      <td>41232.57</td>\n",
        "      <td>5709</td>\n",
        "      <td>2023-11-17</td>\n",
-       "      <td>6 days</td>\n",
+       "      <td>7 days</td>\n",
        "      <td>2023-11-16</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
@@ -443,64 +443,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
+       "      <th>72</th>\n",
        "      <td>7</td>\n",
-       "      <td>Comandante</td>\n",
-       "      <td>2023-10-31</td>\n",
-       "      <td>ITA</td>\n",
-       "      <td>01 Distribution</td>\n",
-       "      <td>31755.13</td>\n",
-       "      <td>6021</td>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2023-11-16</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Eagle Pictures S.P.A.</td>\n",
+       "      <td>34880.58</td>\n",
+       "      <td>5395</td>\n",
+       "      <td>2023-11-23</td>\n",
+       "      <td>7 days</td>\n",
        "      <td>2023-11-22</td>\n",
-       "      <td>22 days</td>\n",
-       "      <td>2023-11-21</td>\n",
-       "      <td>Tuesday</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
+       "      <th>73</th>\n",
        "      <td>8</td>\n",
-       "      <td>Io Capitano</td>\n",
-       "      <td>2023-09-07</td>\n",
-       "      <td>COP</td>\n",
-       "      <td>01 Distribution</td>\n",
-       "      <td>18678.60</td>\n",
-       "      <td>4313</td>\n",
-       "      <td>2023-11-22</td>\n",
-       "      <td>76 days</td>\n",
-       "      <td>2023-11-21</td>\n",
-       "      <td>Tuesday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>9</td>\n",
        "      <td>Trolls 3 - Tutti Insieme (Trolls Band Together)</td>\n",
        "      <td>2023-11-09</td>\n",
        "      <td>USA</td>\n",
        "      <td>Universal S.R.L.</td>\n",
-       "      <td>17939.01</td>\n",
-       "      <td>3081</td>\n",
+       "      <td>18962.76</td>\n",
+       "      <td>3296</td>\n",
+       "      <td>2023-11-23</td>\n",
+       "      <td>14 days</td>\n",
        "      <td>2023-11-22</td>\n",
-       "      <td>13 days</td>\n",
-       "      <td>2023-11-21</td>\n",
-       "      <td>Tuesday</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>10</td>\n",
+       "      <th>74</th>\n",
+       "      <td>9</td>\n",
        "      <td>Dream Scenario - Hai Mai Sognato Quest'Uomo?</td>\n",
        "      <td>2023-11-16</td>\n",
        "      <td>USA</td>\n",
        "      <td>I Wonder Pictures S.R.L.</td>\n",
-       "      <td>16829.74</td>\n",
-       "      <td>2908</td>\n",
+       "      <td>16060.77</td>\n",
+       "      <td>2687</td>\n",
+       "      <td>2023-11-23</td>\n",
+       "      <td>7 days</td>\n",
        "      <td>2023-11-22</td>\n",
-       "      <td>6 days</td>\n",
-       "      <td>2023-11-21</td>\n",
-       "      <td>Tuesday</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Io Capitano</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>COP</td>\n",
+       "      <td>01 Distribution</td>\n",
+       "      <td>12069.00</td>\n",
+       "      <td>2675</td>\n",
+       "      <td>2023-11-23</td>\n",
+       "      <td>77 days</td>\n",
+       "      <td>2023-11-22</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>60 rows × 11 columns</p>\n",
+       "<p>70 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -510,10 +510,10 @@
        "2           3                                        The Marvels   \n",
        "3           4                                       Thanksgiving   \n",
        "..        ...                                                ...   \n",
-       "61          7                                         Comandante   \n",
-       "62          8                                        Io Capitano   \n",
-       "63          9    Trolls 3 - Tutti Insieme (Trolls Band Together)   \n",
-       "64         10       Dream Scenario - Hai Mai Sognato Quest'Uomo?   \n",
+       "72          7                                       Thanksgiving   \n",
+       "73          8    Trolls 3 - Tutti Insieme (Trolls Band Together)   \n",
+       "74          9       Dream Scenario - Hai Mai Sognato Quest'Uomo?   \n",
+       "75         10                                        Io Capitano   \n",
        "\n",
        "   first_screening_date nation               distribution daily_takings  \\\n",
        "0            2023-10-26    ITA        Vision Distribution     449991.06   \n",
@@ -521,23 +521,23 @@
        "2            2023-11-08    USA  Walt Disney S.M.P. Italia      60914.35   \n",
        "3            2023-11-16    USA      Eagle Pictures S.P.A.      41232.57   \n",
        "..                  ...    ...                        ...           ...   \n",
-       "61           2023-10-31    ITA            01 Distribution      31755.13   \n",
-       "62           2023-09-07    COP            01 Distribution      18678.60   \n",
-       "63           2023-11-09    USA           Universal S.R.L.      17939.01   \n",
-       "64           2023-11-16    USA   I Wonder Pictures S.R.L.      16829.74   \n",
+       "72           2023-11-16    USA      Eagle Pictures S.P.A.      34880.58   \n",
+       "73           2023-11-09    USA           Universal S.R.L.      18962.76   \n",
+       "74           2023-11-16    USA   I Wonder Pictures S.R.L.      16060.77   \n",
+       "75           2023-09-07    COP            01 Distribution      12069.00   \n",
        "\n",
        "   daily_attendance date_pulled screening_days       date day_of_week  \n",
-       "0             66700  2023-11-17        27 days 2023-11-16    Thursday  \n",
-       "1             32469  2023-11-17         7 days 2023-11-16    Thursday  \n",
-       "2              8628  2023-11-17        14 days 2023-11-16    Thursday  \n",
-       "3              5709  2023-11-17         6 days 2023-11-16    Thursday  \n",
+       "0             66700  2023-11-17        28 days 2023-11-16    Thursday  \n",
+       "1             32469  2023-11-17         8 days 2023-11-16    Thursday  \n",
+       "2              8628  2023-11-17        15 days 2023-11-16    Thursday  \n",
+       "3              5709  2023-11-17         7 days 2023-11-16    Thursday  \n",
        "..              ...         ...            ...        ...         ...  \n",
-       "61             6021  2023-11-22        22 days 2023-11-21     Tuesday  \n",
-       "62             4313  2023-11-22        76 days 2023-11-21     Tuesday  \n",
-       "63             3081  2023-11-22        13 days 2023-11-21     Tuesday  \n",
-       "64             2908  2023-11-22         6 days 2023-11-21     Tuesday  \n",
+       "72             5395  2023-11-23         7 days 2023-11-22   Wednesday  \n",
+       "73             3296  2023-11-23        14 days 2023-11-22   Wednesday  \n",
+       "74             2687  2023-11-23         7 days 2023-11-22   Wednesday  \n",
+       "75             2675  2023-11-23        77 days 2023-11-22   Wednesday  \n",
        "\n",
-       "[60 rows x 11 columns]"
+       "[70 rows x 11 columns]"
       ]
      },
      "execution_count": 15,
