exported clean csv

--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -602,6 +602,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Export as .csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_file_name = 'cinetel_clean.csv'\n",
+    "clean_file_path = os.path.join(os.getcwd(), clean_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il DataFrame è stato esportato con successo in e:\\data_analysis_python\\cinetel\\cinetel_clean.csv.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.to_csv(clean_file_path, index=False)\n",
+    "print(f\"Il DataFrame è stato esportato con successo in {clean_file_path}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Exploration"
    ]
   },
